@@ -7,6 +7,7 @@ Enhancements:
  * Colourful Runnables! (The output tab supports ANSI escape codes) (Mat Schaffer)
  * Runnables scroll as the output gets longer (Delisa Mason)
  * Option to save all tabs before running any Runnable (Delisa Mason)
+ * Strip trailing spaces on save option (Steven Hancock)
 
 Fixes:
 
